--- a/_includes/layout/navbar.html
+++ b/_includes/layout/navbar.html
@@ -57,15 +57,17 @@
 </nav>
 
 <!-- Menú lateral -->
-<div id="sidebar-wrapper" class="sidebar d-none">
-  <ul class="sidebar-nav list-unstyled" role="menu">
+<div id="sidebar-wrapper" tabindex="-1" class="sidebar" aria-hidden="true" role="menu">
+  <button class="icon-button" id="close-menu-toggle" aria-label="Cerrar menú" title="Cerrar"></button>
+
+  <ul class="sidebar-nav list-unstyled">
     {% if page.lang == "es" %}
-      <li><a href="{{ '/' | relative_url }}">Inicio</a></li>
-      <li><a href="{{ '/sobre-mi.html' | relative_url }}">Sobre mí</a></li>
-      <li><a href="{{ '/posts.html' | relative_url }}">Devlogs</a></li>
-      <li><a href="{{ '/proyectos.html' | relative_url }}">Proyectos</a></li>
-      <li><a href="{{ '/recursos.html' | relative_url }}">Recursos</a></li>
-      <li><a href="{{ '/contacto.html' | relative_url }}">Contacto</a></li>
+    <li><a href="{{ '/' | relative_url }}">Inicio</a></li>
+    <li><a href="{{ '/sobre-mi.html' | relative_url }}">Sobre mí</a></li>
+    <li><a href="{{ '/posts.html' | relative_url }}">Devlogs</a></li>
+    <li><a href="{{ '/proyectos.html' | relative_url }}">Proyectos</a></li>
+    <li><a href="{{ '/recursos.html' | relative_url }}">Recursos</a></li>
+    <li><a href="{{ '/contacto.html' | relative_url }}">Contacto</a></li>
     {% else %}
     <li><a href="{{ '/en' | relative_url }}">Home</a></li>
     <li><a href="{{ '/en/sobre-mi.html' | relative_url }}">About Me</a></li>
@@ -75,7 +77,4 @@
     <li><a href="{{ '/en/contacto.html' | relative_url }}">Contact</a></li>
     {% endif %}
   </ul>
-
-  <!-- Botón para cerrar menú -->
-  <button class="icon-button" id="close-menu-toggle" aria-label="Cerrar menú" title="Cerrar"></button>
 </div>
