--- a/_includes/skills/section.html
+++ b/_includes/skills/section.html
@@ -1,6 +1,6 @@
 <!-- skills/section.html -->
 
-{% assign pastel_classes = "pastel-1,pastel-2,pastel-3,pastel-4,pastel-5,pastel-6" | split: "," %}
+{% assign pastel_classes = "pastel-1,pastel-2,pastel-3,pastel-4,pastel-5,pastel-6,pastel-7,pastel-8,pastel-9,pastel-10" | split: "," %}
 {% assign pastel_index = forloop.index0 | default: 0 %}
 {% assign pastel_class = pastel_classes[pastel_index] %}
 
