--- a/_layouts/landing.html
+++ b/_layouts/landing.html
@@ -8,16 +8,19 @@
 {% include header.html %}
 
 {% assign lang = page.lang | default: 'es' %}
+{% assign hero_buttons = site.data.buttons[lang] | default: site.data.buttons['es'] %}
+
 <!-- Hero siempre presente en el layout landing -->
 {% include components/hero-header.html
 img=page.hero_img
 title=page.hero_title
 subtitle=page.hero_subtitle
 description=page.hero_description
-buttons=site.data.buttons[lang]
+buttons=hero_buttons
 %}
 
 {% include footer.html %}
 
 </body>
 </html>
+
