--- a/_layouts/landing.html
+++ b/_layouts/landing.html
@@ -11,13 +11,7 @@
 {% assign hero_buttons = site.data.buttons[lang] | default: site.data.buttons['es'] %}
 
 <!-- Hero siempre presente en el layout landing -->
-{% include components/hero-header.html
-img=page.hero_img
-title=page.hero_title
-subtitle=page.hero_subtitle
-description=page.hero_description
-buttons=hero_buttons
-%}
+{% include components/hero-header.html img=page.hero_img title=page.hero_title subtitle=page.hero_subtitle description=page.hero_description buttons=hero_buttons %}
 
 {% include footer.html %}
 
