--- a/_layouts/landing.html
+++ b/_layouts/landing.html
@@ -36,6 +36,10 @@
 <!-- Hero siempre presente en el layout landing -->
 {% include components/hero-header.html img=page.hero_img title=page.hero_title subtitle=page.hero_subtitle description=page.hero_description buttons=hero_buttons %}
 
+<!-- Contenido del index.md o index.html -->
+<main class="container my-5">
+    {{ content }}
+</main>
 
 <!-- Footer -->
 {% include layout/footer.html %}
@@ -48,6 +52,3 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>
 </body>
-</html>
-
-<body class="landing-page">
