--- a/_includes/skills/item.html
+++ b/_includes/skills/item.html
@@ -1,6 +1,7 @@
 <!-- skills/item.html -->
 <div class="skill-item d-flex align-items-center gap-2 rounded px-2 py-1 text-white small fw-medium shadow-sm"
      style="background-color: #{{ include.color }};">
+    {% if include.tooltip %} data-tippy-content="{{ include.tooltip }}" {% endif %}>
     {% if include.logo %}
     <i class="devicon-{{ include.logo | downcase }}-plain"></i>
     {% endif %}
