--- a/_includes/skills/category.html
+++ b/_includes/skills/category.html
@@ -9,7 +9,8 @@
         {% include skills/item.html
         name=item.name
         logo=item.logo
-        color=item.color %}
+        color=item.color
+        tooltip=item.tooltip %}
         {% endfor %}
     </div>
 </div>
