--- a/_includes/components/hero-header.html
+++ b/_includes/components/hero-header.html
@@ -10,7 +10,7 @@
 
     <!-- Contenido centrado -->
     <div class="container px-4 px-lg-5 text-center" style="position: relative; z-index: 2;">
-        <div class="text-box bg-body bg-opacity-75 p-4 rounded shadow-lg">
+        <div class="text-box">
 
             {% assign lang = page.lang | default: 'es' %}
             {% if lang == 'en' %}
