--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -22,6 +22,9 @@
 {% include layout/navbar.html %}
 
 <!-- Hero Image dinámico (dark/light) -->
+{% assign hero_img_dark = page.hero_image_dark | default: page.hero_image %}
+{% assign hero_img_light = page.hero_image_light | default: page.hero_image %}
+
 {% if page.hero_image_dark or page.hero_image_light %}
 <div class="post-hero-image d-flex align-items-center justify-content-center text-center w-100 mb-5 position-relative"
      style="background-image: url('{{ page.hero_image_dark | relative_url }}')"
